title align center fix

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ align-items: center;
 h1{
     margin-bottom: 2em;
     font-size: 4em;
+    text-align: center;
 }
 
 button {
